Added auth scaffolding

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -4,7 +4,7 @@ server {
     access_log /var/log/nginx/access.log;
     client_max_body_size 100M;
 
-    root /var/www/laravel/public;
+    root /var/www/gym/public;
     index index.php index.html;
 
     location / {
