--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,11 @@ networks:
 services:
   nginx:
     image: nginx:stable
-    container_name: Laravel8-NGINX
+    container_name: Gym-NGINX
     ports:
       - "9400:80"
     volumes:
-      - .:/var/www/laravel
+      - .:/var/www/gym
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php
@@ -23,9 +23,9 @@ services:
     build:
       context: ./docker
       dockerfile: Dockerfile
-    container_name: Laravel8-
+    container_name: Gym-PHP
     volumes:
-      - .:/var/www/laravel
+      - .:/var/www/gym
       - ./docker/php/www.conf:/usr/local/etc/php/conf.d/www.conf
       - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
     restart: always
