--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
         "tailwindcss": "^3.0.18",
         "vue": "^3.2.31",
         "vue-loader": "^17.0.0"
+    },
+    "dependencies": {
+        "qrcode.vue": "^3.4.1",
+        "vue-barcode-reader": "^1.0.3"
     }
 }
