--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
         "vue-loader": "^17.0.0"
     },
     "dependencies": {
+        "@vuepic/vue-datepicker": "^9.0.3",
+        "chart.js": "^4.4.4",
         "qrcode.vue": "^3.4.1",
-        "vue-barcode-reader": "^1.0.3"
+        "vue-barcode-reader": "^1.0.3",
+        "vue-chartjs": "^5.3.1"
     }
 }
